[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/NUEVO/MATERIA.png" type="Texture" id=1]
[ext_resource path="res://img/btn_geo.png" type="Texture" id=2]
[ext_resource path="res://img/btn_quimica.png" type="Texture" id=3]
[ext_resource path="res://img/btn_fisica.png" type="Texture" id=4]
[ext_resource path="res://script/Sele_Materia.gd" type="Script" id=5]

[node name="Sele_Materia" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
modulate = Color( 0.901961, 0.901961, 0.886275, 1 )
self_modulate = Color( 0.827451, 0.439216, 0.439216, 1 )
margin_left = 84.0
margin_top = 448.0
margin_right = 608.0
margin_bottom = 612.0
texture_normal = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
self_modulate = Color( 0.827451, 0.439216, 0.439216, 1 )
margin_left = 712.0
margin_top = 452.0
margin_right = 1236.0
margin_bottom = 616.0
texture_normal = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer"]
self_modulate = Color( 0.827451, 0.439216, 0.439216, 1 )
margin_left = 1324.0
margin_top = 452.0
margin_right = 1848.0
margin_bottom = 616.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
